--- a/style.css
+++ b/style.css
@@ -2,3 +2,78 @@ body {
     margin: 0;
     font-family: "Roboto", sans-serif;
 }
+
+/* Hero section */
+.hero-wrapper {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f2937;
+}
+  
+header {
+    display: flex;
+    padding: 16px 144px;
+}
+
+.logo {
+    color: #f9faf8;
+    font-size: 24px;
+    font-weight: 700;
+}
+  
+ul {
+    display: flex;
+    gap: 16px;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+  
+a {
+    color: #e5e7eb;
+    font-size: 18px;
+    text-decoration: none;
+}
+  
+.links {
+    margin-left: auto;
+}
+  
+.hero {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    padding: 0 144px;
+    margin: 124px 0;
+}
+
+.hero-content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+
+.hero h1 {
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: 900;
+    margin: 0;
+}
+
+.hero p {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.hero-image {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    color: #e5e7eb;
+    font-size: 18px;
+    background-color: grey;
+}
+  
