--- a/style.css
+++ b/style.css
@@ -76,4 +76,45 @@ a {
     font-size: 18px;
     background-color: grey;
 }
+
+/* Info section */
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 144px;
+}
+
+.info-title {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: 900;
+    margin: 32px;
+}
+
+.card-container {
+    display: flex;
+    gap: 32px;
+    margin-bottom: 64px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
   
+.card-image {
+    height: 148px;
+    width: 148px;
+    border: 4px solid #3882f6;
+    border-radius: 18px;
+}
+
+.card-text {
+    color: #1f2937;
+    font-size: 16px;
+    text-align: center;
+    width: 148px;
+}
